[package]
name = "icm20948_dump"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.0"

defmt = "0.3.4"
defmt-rtt = "0.4"

embassy-embedded-hal = "0.1.0"
embassy-executor = { version = "0.5.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "integrated-timers",
] }
embassy-rp = { version = "0.1.0", features = [
  "critical-section-impl",
  "time-driver",
] }
embassy-time = "0.3.1"

icm20948-async = { git = "https://github.com/peterkrull/icm20948-async" }

panic-probe = { version = "0.3", features = ["print-defmt"] }
